--- a/my_inventory/inventory.ini
+++ b/my_inventory/inventory.ini
@@ -1,8 +1,8 @@
 # ## Configure 'ip' variable to bind kubernetes services on a
 # ## different ip than the default iface
-manager1 ansible_ssh_host=192.168.180.90
-manager2 ansible_ssh_host=192.168.180.91
-node1    ansible_ssh_host=192.168.180.93
+manager1 ansible_ssh_host=10.0.0.16
+node1    ansible_ssh_host=10.0.0.18
+node2    ansible_ssh_host=10.0.0.17
 # node4 ansible_ssh_host=95.54.0.15  # ip=10.3.0.4
 # node5 ansible_ssh_host=95.54.0.16  # ip=10.3.0.5
 # node6 ansible_ssh_host=95.54.0.17  # ip=10.3.0.6
@@ -12,27 +12,26 @@ node1    ansible_ssh_host=192.168.180.93
 
 [kube-master]
 manager1
-manager2
 
 [etcd]
 manager1
-manager2
 node1
+node2
 
 [kube-node]
 manager1
-manager2
 node1
+node2
 
 [k8s-cluster:children]
 kube-node
 kube-master
 
-[gfs-cluster]
-manager1 disk_volume_device_1=/dev/sdc
-manager2 disk_volume_device_1=/dev/sdc
-node1 disk_volume_device_1=/dev/sdc
+# [gfs-cluster]
+# manager1 disk_volume_device_1=/dev/sdc
+# manager2 disk_volume_device_1=/dev/sdc
+# node1 disk_volume_device_1=/dev/sdc
 
-[network-storage:children]
-gfs-cluster
+# [network-storage:children]
+# gfs-cluster
 
