Adding gluster as a distributed storage
Signed-off-by: Ian Allison <iana@pims.math.ca>

--- a/my_inventory/inventory.ini
+++ b/my_inventory/inventory.ini
@@ -27,11 +27,11 @@ node2
 kube-node
 kube-master
 
-# [gfs-cluster]
-# manager1 disk_volume_device_1=/dev/sdc
-# manager2 disk_volume_device_1=/dev/sdc
-# node1 disk_volume_device_1=/dev/sdc
+[gfs-cluster]
+manager1 disk_volume_device_1=/dev/sdb
+node1 disk_volume_device_1=/dev/sdb
+node2 disk_volume_device_1=/dev/sdb
 
-# [network-storage:children]
-# gfs-cluster
+[network-storage:children]
+gfs-cluster
 
