Update inventory and use elrepo kernel
  * Use 4.4 series kernel (from el-repo) in setup playbook
  (ansible/plays/k8s.yml). This allows us to pick a different storage
  backend for docker later
  * Remove unused inventory files and add new ones

Signed-off-by: Ian Allison <iana@pims.math.ca>

--- a/ansible/plays/k8s.yml
+++ b/ansible/plays/k8s.yml
@@ -9,3 +9,4 @@
     - { role: ssh-public-keys,             tags: ["setup", "ssh"] }
     - { role: ansible-sudo,                tags: ["setup", "sudo"] }
     - { role: ansible-sshd,                tags: ["setup", "sshd"] }
+    - { role: elrepo-kernel,               tags: ["kernek"] }
