--- a/ansible/roles/internal/heketi/server/defaults/main.yml
+++ b/ansible/roles/internal/heketi/server/defaults/main.yml
@@ -1,5 +1,8 @@
 ---
 heketi_config_file: "/etc/heketi/heketi.json"
-heketi_ssh_public_key: "/etc/heketi/heketi_key.pub"
-heketi_ssh_private_key: "/etc/heketi/heketi_key"
-heketi_port: "8080"
+heketi_ssh_public_key_file: "/etc/heketi/heketi_key.pub"
+heketi_ssh_private_key_file: "/etc/heketi/heketi_key"
+
+# This should be defined on something in the server role
+heketi_server: "{{ ansible_hostname }}"
+heketi_server_port: "8080"
