--- a/ansible/roles/internal/heketi/server/tasks/setup-RedHat.yml
+++ b/ansible/roles/internal/heketi/server/tasks/setup-RedHat.yml
@@ -1,32 +1,24 @@
 ---
 - name: Install Heketi server package
-  yum: name="heketi"  state=present
-  with_items:
-    - "heketi"
-    - "heketi-client"
+  yum: 'name="{{ heketi_daemon_package }}"  state=present'
 
 - name: Create a new ssh key
-  shell: ssh-keygen -f /etc/heketi/heketi_key.pub -t rsa -N ''
+  shell: ssh-keygen -f "{{ heketi_ssh_private_key_file }}" -t rsa -N ''
   args:
-    creates: /etc/heketi/heketi_key.pub
+    creates: "{{ heketi_ssh_private_key_file }}"
 
 - name: Update key permissions
   file:
-    path: {{ item }}
-    owner: 'heketi'
-    group: 'heketi'
+    path: "{{ item }}"
+    owner: "{{ heketi_user }}"
+    group: "{{ heketi_user }}"
   with_items:
     - "/etc/heketi/heketi_key"
     - "/etc/heketi/heketi_key.pub"
-
-- name: Retrieve Heketi public key
-  shell: cat /etc/heketi/heketi_key.pub
-  register: heketi_public_key
-  changed_when: false
 
 - name: Update Heketi config file
   template:
     src: heketi.json.j2
     dest: /etc/heketi/heketi.json
-    owner: root
-    group: heketi
+    owner: "root"
+    group: "{{ heketi_user }}"
