--- a/ansible/roles/internal/heketi/server/vars/RedHat.yml
+++ b/ansible/roles/internal/heketi/server/vars/RedHat.yml
@@ -1,3 +1,6 @@
 ---
 heketi_daemon: "heketi"
-heketi_ssh_user: "heketi"
+heketi_daemon_package: "heketi"
+heketi_user: "heketi"
+heketi_ssh_user: "{{ heketi_user }}"
+heketi_client_package: "heketi"
