--- a/ansible/roles/internal/heketi/server/vars/RedHat.yml
+++ b/ansible/roles/internal/heketi/server/vars/RedHat.yml
@@ -3,4 +3,4 @@ heketi_daemon: "heketi"
 heketi_daemon_package: "heketi"
 heketi_user: "heketi"
 heketi_ssh_user: "{{ heketi_user }}"
-heketi_client_package: "heketi"
+heketi_client_package: "heketi-client"
