--- a/ansible/roles/internal/heketi/client/tasks/main.yml
+++ b/ansible/roles/internal/heketi/client/tasks/main.yml
@@ -3,7 +3,7 @@
   include_vars: "{{ ansible_os_family }}.yml"
 
 - name: Get public key from heketi_server
-  command: cat '/etc/heketi/heketi_key.pub'
+  command: cat '{{ heketi_ssh_public_key_file }}'
   delegate_to: "{{ groups['heketi-server'][0] }}"
   register: heketi_ssh_public_key 
   changed_when: false
@@ -17,7 +17,15 @@
     state: present
     key: "{{ heketi_ssh_public_key.stdout }}"
 
-- name: Update User environment
+- name: Update System environment
+  lineinfile:
+    path: "/etc/profile.d/heketi.sh"
+    regexp: '^export HEKETI_CLI_SERVER'
+    line: 'export HEKETI_CLI_SERVER=http://{{ heketi_server }}:{{ heketi_server_port }}'
+    state: present
+    create: yes
+
+- name: Update User Environment
   become: true
   become_user: '{{ heketi_user }}'
   lineinfile:
