--- a/ansible/roles/internal/heketi/server/tasks/setup-RedHat.yml
+++ b/ansible/roles/internal/heketi/server/tasks/setup-RedHat.yml
@@ -13,12 +13,12 @@
     owner: "{{ heketi_user }}"
     group: "{{ heketi_user }}"
   with_items:
-    - "/etc/heketi/heketi_key"
-    - "/etc/heketi/heketi_key.pub"
+    - "{{ heketi_ssh_private_key_file }}"
+    - "{{ heketi_ssh_public_key_file }}"
 
 - name: Update Heketi config file
   template:
     src: heketi.json.j2
-    dest: /etc/heketi/heketi.json
+    dest: '{{ heketi_config_file }}'
     owner: "root"
     group: "{{ heketi_user }}"
