--- a/ansible/roles/internal/heketi/server/defaults/main.yml
+++ b/ansible/roles/internal/heketi/server/defaults/main.yml
@@ -1,5 +1,7 @@
 ---
 heketi_config_file: "/etc/heketi/heketi.json"
+heketi_user: "heketi"
+heketi_ssh_user: "{{ heketi_user }}"
 heketi_ssh_public_key_file: "/etc/heketi/heketi_key.pub"
 heketi_ssh_private_key_file: "/etc/heketi/heketi_key"
 
