Testing simple nfs-client setup
Signed-off-by: Ian Allison <iana@pims.math.ca>

--- a/ansible/plays/init.yml
+++ b/ansible/plays/init.yml
@@ -12,7 +12,7 @@
       tags: always
 
 - name: NFS Server Setup
-  hosts: all
+  hosts: nfs-server
   become: true
   gather_facts: false
   roles:
